# networkplayground

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  client  networkplayground.sublime-project  networkplayground.sublime-workspace  scratch.cpp  test_commands.sh
cmake/: FindSDL2_image.cmake
networkplayground/: main.cpp
networkplayground.xcodeproj/: project.pbxproj
networkplayground.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
networkplayground.xcodeproj/project.xcworkspace/xcshareddata/: networkplayground.xcscmblueprint
networkplayground.xcodeproj/xcuserdata/eparreira.xcuserdatad/xcschemes/: unit_tests.xcscheme  xcschememanagement.plist
networkplayground.xcodeproj/xcuserdata/erikparreira.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
networkplayground.xcodeproj/xcuserdata/erikparreira.xcuserdatad/xcschemes/: networkplaygroundclient.xcscheme  networkplaygroundserver.xcscheme  unit_tests.xcscheme  xcschememanagement.plist
networkplayground/include/: NetworkBasics.h  test.hpp
networkplayground/include/IO/: MemoryBitStream.h
networkplayground/include/console/: console.h
networkplayground/include/const/: consts.h
networkplayground/include/datastructures/: Trie.h
networkplayground/include/gameobjects/: Engine.h  GameObject.h  GameObjectRegistry.h  InputState.h  Move.h  MoveList.h  Player.h  PlayerMessage.h  World.h
networkplayground/include/math/: Random.h  Vector3.h  WeightedTimedMovingAverage.h
networkplayground/include/networking/: AckRange.h  DeliveryNotificationManager.h  InFlightPacket.h  Logger.h  NetworkManager.h  NetworkedData.h  Networking.h  NetworkingShared.h  NetworkingShared.hpp  ReplicationCommand.h  SocketAddress.h  SocketAddressFactory.h  SocketConsts.h  SocketUtil.h  StringUtils.h  TCPSocket.h  TransmissionData.h  UDPSocket.h
networkplayground/include/networking/IO/: MemoryBitStream.h
networkplayground/include/packets/: InputStatePacket.h
networkplayground/include/timing/: Timing.h  timing.h
networkplayground/src/: test.cpp
networkplayground/src/IO/: CMakeLists.txt  MemoryBitStream.cpp  MemoryBitStream.h  MemoryBitStream.hpp
networkplayground/src/console/: CMakeLists.txt  console.cpp
networkplayground/src/datastructures/: Trie.cpp
networkplayground/src/gameobjects/: Engine.cpp  GameObject.cpp  GameObjectRegistry.cpp  InputState.cpp  Move.cpp  MoveList.cpp  Player.cpp  PlayerMessage.cpp  World.cpp
networkplayground/src/math/: Random.cpp  Vector3.cpp
networkplayground/src/networking/: AckRange.cpp  DeliveryNotificationManager.cpp  InFlightPacket.cpp  Logger.cpp  NetworkManager.cpp  Networking.cpp  SocketAddress.cpp  SocketAddressFactory.cpp  SocketAddressFactory.hpp  SocketUtil.cpp  StringUtils.cpp  TCPSocket.cpp  TCPSocket.hpp  UDPSocket.cpp  UDPSocket.hpp
networkplayground/src/timing/: Timing.cpp
networkplayground/tests/: OutputMemoryBitStream_test.cpp
networkplaygroundclient/include/gameobjects/: Client.h  Ghost.h  PlayerClient.h
networkplaygroundclient/include/graphics/: GraphicsDriver.h  RenderManager.h  SpriteComponent.h  Texture.h  TextureManager.h  WindowManager.h
networkplaygroundclient/include/input/: InputManager.h
networkplaygroundclient/include/networking/: NetworkManagerClient.h  ReplicationManagerClient.h
networkplaygroundclient/src/: main.cpp
networkplaygroundclient/src/gameobjects/: Client.cpp  Ghost.cpp  PlayerClient.cpp
networkplaygroundclient/src/graphics/: GraphicsDriver.cpp  RenderManager.cpp  SpriteComponent.cpp  TextureManager.cpp  WindowManager.cpp
networkplaygroundclient/src/input/: InputManager.cpp
networkplaygroundclient/src/networking/: NetworkManagerClient.cpp  ReplicationManagerClient.cpp
networkplaygroundserver/include/gameobjects/: PlayerServer.h
networkplaygroundserver/include/networking/: ClientProxy.h  NetworkManagerServer.h  ReplicationManagerServer.h  ReplicationManagerTransmissionData.h  Server.h
networkplaygroundserver/include/src/: Server.cpp  Server.hpp  main.cpp
networkplaygroundserver/src/: console.cpp  console.h  main.cpp
networkplaygroundserver/src/gameobjects/: PlayerServer.cpp
networkplaygroundserver/src/networking/: ClientProxy.cpp  NetworkManagerServer.cpp  ReplicationManagerServer.cpp  ReplicationManagerTransmissionData.cpp  Server.cpp
networkplaygroundserver/tests/: tests.cpp  tests.hpp
unit_tests/: calc.h  calc\.h  main.cpp
vagrant_env/: Vagrantfile  setup.sh
vagrant_env/files/: fish_config  fish_prompt.fish  googletest.sh  install_packages.sh  setup_fish.sh
